examples/test/testpolicy16376.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy16376
  namespace: namespace345
spec:
  podSelector:
    matchLabels:
      key3: value36
      key18: value14
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key18: value45
          key31: value10
      podSelector:
        matchLabels:
          key45: value8
          key3: value17
